feat: utilizando pub/sub e melhorando terraform
